Acrescentando secret e método para recuperar informações sobre o documento
