# src/main/java/br/jus/trf2/assijus/system/api/IAssijusSystem.java
@@ -11,11 +11,24 @@ import com.crivano.swaggerservlet.ISwaggerResponse;
 public interface IAssijusSystem {
 	public class Document implements ISwaggerModel {
 		public String id;
+		public String secret;
 		public String code;
 		public String descr;
 		public String kind;
 		public String origin;
 		public String extra;
+	}
+
+	public class Signature implements ISwaggerModel {
+		public String ref;
+		public String signer;
+		public String kind;
+	}
+
+	public class Movement implements ISwaggerModel {
+		public Date time;
+		public String department;
+		public String kind;
 	}
 
 	public class Warning implements ISwaggerModel {
@@ -37,8 +50,7 @@ public interface IAssijusSystem {
 	}
 
 	public interface IDocListGet extends ISwaggerMethod {
-		public void run(DocListGetRequest req, DocListGetResponse resp)
-				throws Exception;
+		public void run(DocListGetRequest req, DocListGetResponse resp) throws Exception;
 	}
 
 	public class DocIdPdfGetRequest implements ISwaggerRequest {
@@ -48,11 +60,11 @@ public interface IAssijusSystem {
 
 	public class DocIdPdfGetResponse implements ISwaggerResponse {
 		public byte[] doc;
+		public String secret;
 	}
 
 	public interface IDocIdPdfGet extends ISwaggerMethod {
-		public void run(DocIdPdfGetRequest req, DocIdPdfGetResponse resp)
-				throws Exception;
+		public void run(DocIdPdfGetRequest req, DocIdPdfGetResponse resp) throws Exception;
 	}
 
 	public class DocIdHashGetRequest implements ISwaggerRequest {
@@ -67,11 +79,11 @@ public interface IAssijusSystem {
 		public String policy;
 		public String extra;
 		public byte[] doc;
+		public String secret;
 	}
 
 	public interface IDocIdHashGet extends ISwaggerMethod {
-		public void run(DocIdHashGetRequest req, DocIdHashGetResponse resp)
-				throws Exception;
+		public void run(DocIdHashGetRequest req, DocIdHashGetResponse resp) throws Exception;
 	}
 
 	public class DocIdSignPutRequest implements ISwaggerRequest {
@@ -90,8 +102,35 @@ public interface IAssijusSystem {
 	}
 
 	public interface IDocIdSignPut extends ISwaggerMethod {
-		public void run(DocIdSignPutRequest req, DocIdSignPutResponse resp)
-				throws Exception;
+		public void run(DocIdSignPutRequest req, DocIdSignPutResponse resp) throws Exception;
+	}
+
+	public class DocIdInfoGetRequest implements ISwaggerRequest {
+		public String id;
+	}
+
+	public class DocIdInfoGetResponse implements ISwaggerResponse {
+		public String status;
+		public List<Signature> signature;
+		public List<Movement> movement;
+		public String secret;
+	}
+
+	public interface IDocIdInfoGet extends ISwaggerMethod {
+		public void run(DocIdInfoGetRequest req, DocIdInfoGetResponse resp) throws Exception;
+	}
+
+	public class SignRefGetRequest implements ISwaggerRequest {
+		public String ref;
+	}
+
+	public class SignRefGetResponse implements ISwaggerResponse {
+		public byte[] envelope;
+		public Date time;
+	}
+
+	public interface ISignRefGet extends ISwaggerMethod {
+		public void run(SignRefGetRequest req, SignRefGetResponse resp) throws Exception;
 	}
 
 }
